@@ -6,6 +6,8 @@ Date: ???
     - Updated to 1.1
     - Map settings Enemy Evolution and Expansion hidden
     - Worms will only spawn if map setting Enemy Bases is enabled
+    - Blue algae liquefaction recipe unlock moved from Oil processing to Gas and oil extraction
+    - Blue algae liquefaction recipe moved from Oil Refinery to Oil and Gas Separator
   Bugfixes:
     - Fixed missing icon "liquid-multi-phase-oil.png"
     - Removed coal and crushed coal
